feat: migrate to connect rpc
